@@ -31,9 +31,9 @@ dependencies {
     implementation ('org.apache.httpcomponents:httpclient:4.5.14') {
         exclude group: 'commons-logging', module: 'commons-logging'
     }
-    implementation 'org.apache.logging.log4j:log4j-core:2.25.1'
+    implementation 'org.apache.logging.log4j:log4j-core:2.25.2'
     implementation 'com.oracle.database.jdbc:ojdbc11:23.9.0.25.07'
-    implementation 'org.springframework:spring-jdbc:6.2.9'
+    implementation 'org.springframework:spring-jdbc:6.2.10'
 
     /*
     implementation 'org.incenp:sssom-core:0.7.9'
